static/style.css
/* global resets and base styles */
* {
    margin: 0;
    padding: 0;
}

html, body {
    height: 100%;
    margin: 0;
}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

/* home page */
header {
    background-color: rgb(120, 202, 252);
    font-size: 1.7rem;
    color: #FFFFFF;
    padding: 1rem 0 1rem 2.5rem;
    font-family: 'Satoshi';
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
    font-weight: 700;
    height: 4.5rem; 
    box-sizing: border-box;
    position: relative;
    width: auto;
    flex-shrink: 0;
}

.header-logo {
    width: 2.5rem;
    height: 2.5rem;
}

.header-content {
    display: flex;
    align-items: center;
    gap: 1.25rem;
}

.header-content a {
    text-decoration: none;
    color: #ffffff;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

footer {
    font-family: 'Satoshi';
    text-align: center;
    padding: 1rem;
    font-size: 1rem;
    color: #ffffff;
    font-weight: 500;
    background-color: rgb(120, 202, 252);
    flex-shrink: 0;
    margin: auto -2.5rem -2.5rem -2.5rem;
}

/* navigation bar (sidebar) */
.main-container {
    display: flex;
    flex: 1;
    overflow: hidden;
}

.navbar {
    font-family: 'Satoshi';
    background-color: rgb(199, 199, 199);
    width: 15rem;
    padding-bottom: 10rem;
    height: 100vh;
    overflow: auto;
}

li a {
    display: block;
    text-decoration: none;
    color: #000000;
    font-size: 1.1rem;
    font-weight: 500;
    padding: 1.5rem 0 1.5rem 2.5rem;
}

li a:hover {
    background-color: #b9b7b7;
    transition: all 0.3s ease;
}

.nav-divider {
    border-top: 0.1rem solid #b0b0b0;
    margin: 1rem 0;
}

nav li i {
    margin-right: 1.5rem;
}

.navbar li a.active {
    background-color: #b9b7b7;
}

/* main content */
main {
    flex-grow: 1;
    padding: 2.5rem;
    overflow-y: auto;
    background-color: #dfdfdf;
    display: flex;
    flex-direction: column;
}

.header-section {
    align-items: center;
    display: flex;
    justify-content: space-between;
}

.intro {
    font-family: 'Satoshi';
    margin-top: -0.5rem;
}

.description {
    margin-top: 1rem;
    font-size: 1.2rem;
    font-weight: 400;
}

/* add subject and task buttons */
.add-subject-btn {
    font-family: 'Satoshi';
    font-size: 0.9rem;
    border: 0.1rem solid #a9a8a8;
    display: inline-flex;
    transition: 0.1s;
    margin-right: 5rem;
    text-decoration: none;
    padding: 2.25rem 1.25rem;
    border-radius: 1rem;
    color: #000000;  
    background-color: #dfdfdf; 
    width: 9rem;     
    align-items: center;  
    justify-content: center;
}

.add-task-btn {
    font-family: 'Satoshi';
    font-size: 1rem;
    display: inline-flex;
    transition: 0.1s;
    text-decoration: none; 
    padding: 0.85rem 1.3rem;
    border-radius: 1rem;
    background-color: rgb(120, 202, 252); 
    color: #ffffff;     
    width: 9rem;   
    align-items: center;
    justify-content: center;
    border: none;
}

.add-subject-btn:hover {
    background-color: rgb(200, 200, 200);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    cursor: pointer;
}

.add-task-btn:hover {
    background-color: rgb(93, 190, 250);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    cursor: pointer;
}

.add-task-btn:active, .add-subject-btn:active {
    transform: scale(0.95); 
}

/* subject grid */
.subjects-grid {
    font-family: 'Satoshi';
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
    gap: 1.5rem;
    align-items: start;
}

.subjects-card-text {
    margin-left: 1rem;
}

.subjects-card h3 {
    padding-bottom: 0.5rem;
}

.subjects-card {
    padding: 1.25rem 1rem;
    width: 7rem;
    border-radius: 1rem;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.subjects-header {
    font-family: 'Satoshi';
    margin: 1.5rem 0 1.5rem 0;
    font-size: 1rem;
}

.no-subjects-alert {
    margin-top: 0.5rem;
    font-size: 0.9rem;
}

.subjects-truncate {
    display: block;
    max-width: 6rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* modals */
.modal-header  {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 1rem;
}

.modal-overlay {
    display: none;
    font-family: 'Satoshi';
    position: fixed;
    inset: 0;
    background: rgba(0, 0, 0, 0.5);
    align-items: center;
    justify-content: center;
}

.modal-box {
    background-color: #ffffff;
    padding: 1rem 2rem;
    border-radius: 1rem;
    backdrop-filter: blur(1rem);
    z-index: 1000;
    width: 25rem;
}

.close-modal-btn {
    padding: 0.25rem 0.75rem;
    background-color: #ffffff;
    border: none;
    font-size: 2rem;
}

.close-modal-btn:hover {
    background-color: #dfdfdf;
    border-radius: 50%;
}

.close-modal-btn:active {
    transform: scale(0.97); 
}

.save-btn {
    width: 30%;
    padding: 0.8rem;
    background-color: rgb(120, 202, 252);
    color: white;
    border: none;
    border-radius: 1rem;
    font-family: 'Satoshi';
    font-weight: 700;
    font-size: 0.8rem;
    cursor: pointer;
    transition: transform 0.1s, background-color 0.2s;
    margin: 0.5rem 0 0.5rem 0;
}

.save-btn:hover {
    background-color: rgb(92, 193, 255);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.save-btn:active {
    transform: scale(0.97); 
}

.input-group {
    padding-bottom: 1rem;
}

.input-group label {
    font-family: 'Satoshi';
    font-weight: 700;
    font-size: 0.9rem;
    margin-bottom: 0.5rem;
    color: #000000;
}

.input-group input, .input-group select {
    padding: 0.5rem 0.7rem;
    border: 0.1rem solid #dddddd;
    background-color: #f9f9f9;
    border-radius: 0.8rem;
    font-family: 'Satoshi';
    font-size: 0.7rem;
    transition: all 0.2s ease;
    margin-left: 1rem;
}

.input-group input:focus, .input-group select:focus {
    outline: none;
    border-color: rgb(120, 202, 252);
}
/* ... */

